Add partials and destroy action

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,6 +16,8 @@
       <td><%= link_to a.id, edit_article_path(a) %></td>
       <td><%= a.title %></td>
       <td><%= a.description %></td>
+      <td><%= link_to "Show", article_path(a) %></td>
+      <td><%= link_to "Delete", article_path(a), method: :delete, data: {confirm: "Are you sure?" } %></td>
     <tr>
   <% end %>
 
