--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Home</title>
   </head>
 
   <body>
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
-
+    <%= link_to 'Alpha-blog', articles_path %> |
     <%= link_to 'About', about_path %>
-
   </body>
 
 </html>
