--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,7 @@
-<h1>About page</h1>
-<p>testing</p>
-<%= link_to 'Home', root_path %>
+<h1>About</h1>
+<p>
+  This project was developed by
+  <a href="https://github.com/lucasfranzolin/" target="_blank">
+    Lucas Franzolin
+  </a>
+</p>
