--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Home</title>
-  </head>
-
-  <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-    <%= link_to 'Alpha-blog', articles_path %> |
-    <%= link_to 'About', about_path %>
-  </body>
-
-</html>
+<div class="jumbotron">
+  <h1>Alpha Blog</h1>
+  <p>Sign up now, it's FREE!</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a></p>
+</div>
