Style form partial

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,3 +58,15 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
+
+.button-create {
+  float: left;
+}
+
+.button-cancel {
+  float: right;
+}
+
+.button-new {
+  float: right;
+}
