--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,19 +6,38 @@
   </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  <p/>
+<div class ="row">
+  <div class="col-xs-12">
 
-<% end %>
+      <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+        <!-- Title -->
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label :title %>
+          </div>
+          <div class="col-sm-10">
+            <%= f.text_field :title, class: "form-control", placeholder: "", autofocus: true %>
+          </div>
+        </div>
 
-<%= link_to "Cancel", articles_path %>
+        <!-- Description -->
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label :description %><br />
+          </div>
+          <div class="col-sm-10">
+            <%= f.text_area :description, rows: 5, class: "form-control", placeholder: "" %>
+          </div>
+        </div>
+
+        <!-- Buttons -->
+        <div class="form-group ">
+          <div class="col-md-12">
+            <%= f.submit class: "btn btn-success btn-lg col-md-offset-2 button-create" %>
+            <a href="/articles" class="btn btn-danger btn-lg button-cancel">Cancel</a>
+          </div>
+        </div>
+      <% end %>
+
+  </div>
+</div>
