--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,23 @@
-<h1>Listing all articles</h1>
-
-<p>
-  <%= link_to "Create new article", new_article_path %>
-</p>
-
-<table>
-  <tr>
-    <th>Id</th>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-
-  <% @articles.each do |a| %>
+<h1 align="center">Listing all articles</h1>
+<div class="container" align="center">
+  <table>
     <tr>
-      <td><%= link_to a.id, edit_article_path(a) %></td>
-      <td><%= a.title %></td>
-      <td><%= a.description %></td>
-      <td><%= link_to "Show", article_path(a) %></td>
-      <td><%= link_to "Delete", article_path(a), method: :delete, data: {confirm: "Are you sure?" } %></td>
-    <tr>
-  <% end %>
+      <th>Title</th>
+      <th>Description</th>
+    </tr>
 
-</table>
-<p>
-  <%= link_to 'Home', root_path %>
-</p>
+    <% @articles.each do |a| %>
+      <tr>
+        <td><%= a.title %></td>
+        <td><%= a.description %></td>
+        <td><%= link_to "Show", article_path(a) %></td>
+        <td><%= link_to "Delete", article_path(a), method: :delete, data: {confirm: "Are you sure?" } %></td>
+      <tr>
+    <% end %>
+
+  </table>
+
+  <div class="col-md-12">
+    <a href="/articles/new" class="btn btn-primary btn-lg button-new">New</a>
+  </div>
+</div>
