--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,3 +70,9 @@ footer ul li {
 .button-new {
   float: right;
 }
+
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  text-align: right;
+}
