--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,27 @@
-<h1 align="center">Listing all articles</h1>
-<div class="container" align="center">
-  <table>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-    </tr>
+<h1 align="center">Articles</h1>
 
-    <% @articles.each do |a| %>
-      <tr>
-        <td><%= a.title %></td>
-        <td><%= a.description %></td>
-      <tr>
-    <% end %>
-
-  </table>
+<% @articles.each do |a| %>
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <div class="well well-lg">
+        <div class="article-title">
+          <%= link_to a.title, article_path(a) %>
+        </div>
+        <div class="article-description">
+          <!-- truncate (texto, numero de caracteres a serem exbidos)-->
+          <%= truncate(a.description, length: 100) %>
+        </div>
+        <div class="article-actions">
+          <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %>
+          <!-- <a href="/articles" class="btn btn-xs btn-success">Articles</a> -->
+          <%= link_to "Delete", article_path(a), class: "btn btn-xs btn-danger", method: :delete,
+                                                        data: {confirm: "Are you sure?" } %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 
   <div class="col-md-12">
     <a href="/articles/new" class="btn btn-primary btn-lg button-new">New</a>
   </div>
-</div>
