--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,3 +82,8 @@ footer ul li {
   // padding-bottom: 15px;
   padding: 15px 0px
 }
+
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;  
+}
