--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,6 +10,12 @@
         <div class="article-description">
           <!-- truncate (texto, numero de caracteres a serem exbidos)-->
           <%= truncate(a.description, length: 100) %>
+          <div class="article-meta-details">
+            <small> Created by: <%= a.user.username if a.user %>
+                        <%= time_ago_in_words(a.created_at) %> ago,
+                        last update: <%= time_ago_in_words(a.updated_at) %> ago
+            </small>
+          </div>
         </div>
         <div class="article-actions">
           <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %>
