--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1>Alpha Blog</h1>
   <p>Sign up now, it's FREE!</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a></p>
+  <p><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign up</a></p>
 </div>
