--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,18 @@
 <h2 align="center"><%= @article.title %></h2>
+
 <div class="well col-xs-8 col-xs-offset-2">
+  <ul class="list-unstyled">
+    <div class="row" align="center">
+      <div class="col-md-4 col-md-offset-4">
+        Created by:
+        <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %><li/>
+          <li class="article-title">
+            <%= link_to @article.user.username, user_path(@article.user) %>
+          <li/>
+          <!-- <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles%></small><li/> -->
+      </div>
+    </div>
+  </ul>
   <!-- simple_format(text) - mantém a formatação inserida pelo usuário na criação do artigo -->
   <%= simple_format(@article.description) %>
   <div class="article-actions">
