--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
         <!-- <li><a href="about">About <span class="sr-only">(current)</span></a></li> -->
         <li><a href="/articles">Articles</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle glyphicon glyphicon-plus-sign" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/articles/new">Create new article</a></li>
             <li><a href="#">Another action</a></li>
