--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,12 @@
     <p><br/>edit profile</p>
   </div>
 </div>
-<%= render 'articles/article', obj: @user.articles %>
+<div align="center">
+  <%= will_paginate @user_articles %>
+</div>
+
+<%= render 'articles/article', obj: @user_articles %>
+
+<div align="center">
+  <%= will_paginate @user_articles %>
+</div>
