--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 <h1 align="center">Alpha Blogers</h1>
 <div align="center">
+  <%= will_paginate %>
+</div>
+<div align="center">
   <% @users.each do |u| %>
     <ul class="list-unstyled">
       <div class="row">
@@ -13,4 +16,7 @@
       </div>
     </ul>
   <% end %>
+</div>
+<div align="center">
+  <%= will_paginate %>
 </div>
