--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,17 +9,19 @@
           <!-- truncate (texto, numero de caracteres a serem exbidos)-->
           <%= truncate(a.description, length: 100) %>
           <div class="article-meta-details">
-            <small> Created by: <%= a.user.username if a.user %>, 
+            <small> Created by: <%= a.user.username if a.user %>,
                         <%= time_ago_in_words(a.created_at) %> ago,
                         last update: <%= time_ago_in_words(a.updated_at) %> ago
             </small>
           </div>
         </div>
-        <div class="article-actions">
-          <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %>
-          <!-- <a href="/articles" class="btn btn-xs btn-success">Articles</a> -->
-          <%= link_to "Delete", article_path(a), class: "btn btn-xs btn-danger", method: :delete,
-                                                        data: {confirm: "Are you sure?" } %>
+        <% if logged_in? && current_user == a.user %>
+          <div class="article-actions">
+            <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %>
+            <!-- <a href="/articles" class="btn btn-xs btn-success">Articles</a> -->
+            <%= link_to "Delete", article_path(a), class: "btn btn-xs btn-danger", method: :delete,
+                                                          data: {confirm: "Are you sure?" } %>
+        <% end %>
         </div>
       </div>
     </div>
