--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,10 +15,12 @@
   </ul>
   <!-- simple_format(text) - mantém a formatação inserida pelo usuário na criação do artigo -->
   <%= simple_format(@article.description) %>
-  <div class="article-actions">
-    <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-    <!-- <a href="/articles" class="btn btn-xs btn-success">Articles</a> -->
-    <%= link_to "Delete", article_path(@article), class: "btn btn-xs btn-danger", method: :delete,
-                                                  data: {confirm: "Are you sure?" } %>
-  </div>
+  <% if logged_in? && current_user == @article.user %>
+    <div class="article-actions">
+      <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      <!-- <a href="/articles" class="btn btn-xs btn-success">Articles</a> -->
+      <%= link_to "Delete", article_path(@article), class: "btn btn-xs btn-danger", method: :delete,
+                                                    data: {confirm: "Are you sure?" } %>
+    </div>
+  <% end %>
 </div>
