--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,45 +8,47 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" id="logo" href="/">Alpha Blog</a>
+      <% if logged_in? %>
+        <a class="navbar-brand" id="logo" href="/articles">Alpha Blog</a>
+      <% else %>
+        <a class="navbar-brand" id="logo" href="/">Alpha Blog</a>
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <!-- <li><a href="about">About <span class="sr-only">(current)</span></a></li> -->
-        <li><a href="/articles">Articles</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle glyphicon glyphicon-plus-sign" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/articles/new">Create new article</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
+
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></button>
       </form>
+
+      <ul class="nav navbar-nav">
+        <% if logged_in? %>
+          <li><a href="/users">See users</a></li>
+
+        <% end %>
+      </ul>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign in</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Log out</a></li>
-          </ul>
-        </li>
+        <% if logged_in? %>
+          <li><%= link_to "Log out", logout_path, method: :delete %></li>
+        <% else %>
+          <li><a href="/login">Log in</a></li>
+        <% end %>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/articles/new"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New article</a></li>
+              <li><%= link_to "My profile", user_path(current_user) %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Options", edit_user_path(current_user) %></li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
