--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,10 +26,17 @@
       </form>
 
       <ul class="nav navbar-nav">
-        <% if logged_in? %>
-          <li><a href="/users">See users</a></li>
-
-        <% end %>
+        <li><a href="/users">All users</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "All categories", categories_path %></li>
+            <li role="separator" class="divider"></li>
+            <% Category.all.each do |c| %>
+              <li><%= link_to "#{c.name}", category_path(c) %></li>
+            <% end %>
+          </ul>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
@@ -40,10 +47,11 @@
         <% end %>
         <% if logged_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/articles/new"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New article</a></li>
-              <li><%= link_to "My profile", user_path(current_user) %></li>
+              <li><a href="/articles/new"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Add category</a></li>
+              <li><a href="/users/<%= current_user.id %>"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> My profile</a></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "Options", edit_user_path(current_user) %></li>
             </ul>
