--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,5 +85,15 @@ footer ul li {
 
 .article-meta-details {
   border-top: 1px solid #eaeaea;
-  margin-top: 15px;  
+  margin-top: 15px;
+}
+
+.badge {
+  background-color: #CEF6F5;
+  text-transform: lowercase;
+  font-weight: bold;
+}
+
+.input_checkbox input {
+  width: auto !important;
 }
