--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,6 +15,11 @@
             </small>
           </div>
         </div>
+
+        <% if a.categories.any? %>
+          <p>Categories: <%= render a.categories %></p>
+        <% end %>
+
         <% if logged_in? && current_user == a.user %>
           <div class="article-actions">
             <%= link_to "Edit", edit_article_path(a), class: "btn btn-xs btn-primary" %>
