--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,11 @@
   </ul>
   <!-- simple_format(text) - mantém a formatação inserida pelo usuário na criação do artigo -->
   <%= simple_format(@article.description) %>
+
+  <% if @article.categories.any? %>
+    <p>Categories: <%= render @article.categories %></p>
+  <% end %>
+
   <% if logged_in? && current_user == @article.user %>
     <div class="article-actions">
       <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
